Updates v4 AWS Admin Role

--- a/deploy/crds/aws_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
@@ -14,29 +14,91 @@ spec:
     awsStatements:
       - effect: Allow
         action:
-          - "ec2:AttachVpnGateway"
-          - "ec2:DescribeVpnConnections"
           - "ec2:AcceptVpcPeeringConnection"
-          - "ec2:DeleteVpcPeeringConnection"
-          - "ec2:DescribeVpcPeeringConnections"
+          - "ec2:AttachVpnGateway"
+          - "ec2:CreateRoute"
+          - "ec2:CreateTags"
+          - "ec2:CreateVPCEndpoint"
+          - "ec2:CreateVpcPeeringConnection"
+          - "ec2:CreateVpnConnection"
           - "ec2:CreateVpnConnectionRoute"
-          - "ec2:RejectVpcPeeringConnection"
-          - "ec2:DetachVpnGateway"
+          - "ec2:CreateVpnGateway"
+          - "ec2:DeleteVpcPeeringConnection"
+          - "ec2:DeleteVpnConnection"
           - "ec2:DeleteVpnConnectionRoute"
           - "ec2:DeleteVpnGateway"
+          - "ec2:DescribeAvailabilityZones"
+          - "ec2:DescribeRouteTables"
+          - "ec2:DescribeSubnets"
+          - "ec2:DescribeTransitGatewayAttachments"
+          - "ec2:DescribeTransitGatewayVpcAttachments"
+          - "ec2:DescribeTransitGateways"
+          - "ec2:DescribeVPCEndpoint"
+          - "ec2:DescribeVpcPeeringConnections"
           - "ec2:DescribeVpcs"
-          - "ec2:CreateVpnGateway"
-          - "ec2:ModifyVpcPeeringConnectionOptions"
-          - "ec2:DeleteVpnConnection"
-          - "ec2:CreateVpcPeeringConnection"
+          - "ec2:DescribeVpnConnections"
           - "ec2:DescribeVpnGateways"
           - "ec2:CreateVpnConnection"
-          - "ec2:DescribeRouteTables"
           - "ec2:CreateTags"
           - "ec2:CreateRoute"
+          - "ec2:DescribeRouteTables"
+          - "ec2:DetachVpnGateway"
+          - "ec2:ModifyVpcPeeringConnectionOptions"
+          - "ec2:RejectVpcPeeringConnection"
+          - "guardduty:GetDetector"
+          - "guardduty:GetFindings"
+          - "guardduty:GetFindingsStatistics"
+          - "guardduty:GetFreeTrialStatistics"
+          - "guardduty:GetIPSet"
+          - "guardduty:GetInvitationsCount"
+          - "guardduty:GetMasterAccount"
+          - "guardduty:GetMembers"
+          - "guardduty:GetThreatIntelSet"
+          - "guardduty:ListDetectors"
+          - "guardduty:ListFilters"
+          - "guardduty:ListFindings"
+          - "guardduty:ListIPSets"
+          - "guardduty:ListInvitations"
+          - "guardduty:ListMembers"
+          - "guardduty:ListThreatIntelSets"
+          - "ram:AcceptResourceShareInvitation"
+          - "ram:DeleteResourceShare"
+          - "ram:GetResourcePolicies"
+          - "ram:GetResourceShareAssociations"
+          - "ram:GetResourceShareInvitations"
+          - "ram:GetResourceShares"
+          - "ram:ListPendingInvitationResources"
+          - "ram:ListPrincipals"
+          - "ram:ListResources"
+          - "ram:RejectResourceShareInvitation"
+          - "route53resolver:AssociateResolverRule"
+          - "route53resolver:DeleteResolverRule"
+          - "route53resolver:DisassociateResolverRule"
+          - "route53resolver:GetResolverRule"
+          - "route53resolver:GetResolverRuleAssociation"
+          - "route53resolver:ListResolverRuleAssociations"
+          - "route53resolver:ListResolverRules"
+          - "support:*"
           - "directconnect:*"
         resource: 
           - "*"
+      - effect: Allow
+        action:
+          - "ram:*"
+        resource:
+          - "*"
+        condition:
+          StringEquals:
+            ram:RequestedResourceType: route53resolver:ResolverRule
+      - effect: Allow
+        action:
+          - "ec2:CreateTransitGatewayVpcAttachment"
+        resource:
+          - "arn:aws:ec2:*:*:subnet/*"
+          - "arn:aws:ec2:*:*:transit-gateway/*"
+          - "arn:aws:ec2:*:*:vpc/*"
+          - "arn:aws:ec2:*:*:transit-gateway-attachment/*"
+
   # list of  AWS managed
   awsManagedPolicies:
     - "AmazonEC2ReadOnlyAccess"
