Make target to test CCS workflow

--- a/deploy/crds/aws_v1alpha1_accountpool_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_accountpool_cr.yaml
@@ -2,6 +2,7 @@ apiVersion: aws.managed.openshift.io/v1alpha1
 kind: AccountPool
 metadata:
   name: example-accountpool
+  namespace: aws-account-operator
 spec:
   # Add fields here
   poolSize: 1
