Fix namespace on SA

--- a/deploy/uhc_service_account.yaml
+++ b/deploy/uhc_service_account.yaml
@@ -2,4 +2,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: aws-account-operator-client
-  namespace: aws-account-operator-client # This namespace needs to be created in advance.
+  namespace: aws-account-operator # This namespace needs to be created in advance.
