Added CreateCustomerGateway perm
In accordance with https://docs.openshift.com/dedicated/4/cloud_infrastructure_access/dedicated-aws-vpn.html#dedicated-aws-vpn-creating-configuring

The ec2:CreateCustomerGateway has been added to this policy CR

--- a/deploy/crds/aws_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
@@ -16,6 +16,7 @@ spec:
         action:
           - "ec2:AcceptVpcPeeringConnection"
           - "ec2:AttachVpnGateway"
+          - "ec2:CreateCustomerGateway"
           - "ec2:CreateRoute"
           - "ec2:CreateTags"
           - "ec2:CreateVPCEndpoint"
