Added EnableVgwRoutePropagation to network role
Also cleaned the role with current errors. A typo and some reference to
non existing permissions in guardduty.

--- a/deploy/crds/aws_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
@@ -34,7 +34,7 @@ spec:
           - "ec2:DescribeTransitGatewayAttachments"
           - "ec2:DescribeTransitGatewayVpcAttachments"
           - "ec2:DescribeTransitGateways"
-          - "ec2:DescribeVPCEndpoint"
+          - "ec2:DescribeVpcEndpoints"
           - "ec2:DescribeVpcPeeringConnections"
           - "ec2:DescribeVpcs"
           - "ec2:DescribeVpnConnections"
@@ -46,10 +46,10 @@ spec:
           - "ec2:DetachVpnGateway"
           - "ec2:ModifyVpcPeeringConnectionOptions"
           - "ec2:RejectVpcPeeringConnection"
+          - "ec2:EnableVgwRoutePropagation"
           - "guardduty:GetDetector"
           - "guardduty:GetFindings"
           - "guardduty:GetFindingsStatistics"
-          - "guardduty:GetFreeTrialStatistics"
           - "guardduty:GetIPSet"
           - "guardduty:GetInvitationsCount"
           - "guardduty:GetMasterAccount"
@@ -58,7 +58,6 @@ spec:
           - "guardduty:ListDetectors"
           - "guardduty:ListFilters"
           - "guardduty:ListFindings"
-          - "guardduty:ListIPSets"
           - "guardduty:ListInvitations"
           - "guardduty:ListMembers"
           - "guardduty:ListThreatIntelSets"
