Add DisableVgwRoutePropagation to networkmgmt role

--- a/deploy/crds/aws_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
@@ -46,6 +46,7 @@ spec:
           - "ec2:DetachVpnGateway"
           - "ec2:ModifyVpcPeeringConnectionOptions"
           - "ec2:RejectVpcPeeringConnection"
+          - "ec2:DisableVgwRoutePropagation"
           - "guardduty:GetDetector"
           - "guardduty:GetFindings"
           - "guardduty:GetFindingsStatistics"
