Add EnableVgwRoutePropagation to networkmgmt role
Also fixed typo as per: https://docs.aws.amazon.com/AWSEC2/latest/APIReference/API_DescribeVpcEndpoints.html

DescribeVPCEndpoint != DescribeVPCEndpoints

--- a/deploy/crds/aws_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
@@ -34,7 +34,7 @@ spec:
           - "ec2:DescribeTransitGatewayAttachments"
           - "ec2:DescribeTransitGatewayVpcAttachments"
           - "ec2:DescribeTransitGateways"
-          - "ec2:DescribeVPCEndpoint"
+          - "ec2:DescribeVPCEndpoints"
           - "ec2:DescribeVpcPeeringConnections"
           - "ec2:DescribeVpcs"
           - "ec2:DescribeVpnConnections"
@@ -47,6 +47,7 @@ spec:
           - "ec2:ModifyVpcPeeringConnectionOptions"
           - "ec2:RejectVpcPeeringConnection"
           - "ec2:DisableVgwRoutePropagation"
+          - "ec2:EnableVgwRoutePropagation"
           - "guardduty:GetDetector"
           - "guardduty:GetFindings"
           - "guardduty:GetFindingsStatistics"
