add resource limits/requests for the operator per OSD-2109

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -21,6 +21,13 @@ spec:
           command:
           - aws-account-operator
           imagePullPolicy: Always
+          resources:
+            requests:
+              memory: "200Mi"
+              cpu: "50m"
+            limits:
+              memroy: "400Mi"
+              cpu: "100m"
           env:
             - name: WATCH_NAMESPACE
               value: ""
