--- a/deploy/crds/aws_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_awsfederatedrole_networkmgmt_cr.yaml
@@ -14,10 +14,13 @@ spec:
     awsStatements:
       - effect: Allow
         action:
+          - "ec2:AssociateRouteTable"
+          - "ec2:AttachInternetGateway"
           - "ec2:AcceptVpcPeeringConnection"
           - "ec2:AttachVpnGateway"
           - "ec2:CreateCustomerGateway"
           - "ec2:CreateRoute"
+          - "ec2:CreateRouteTable"
           - "ec2:CreateTags"
           - "ec2:CreateVPCEndpoint"
           - "ec2:CreateVpcPeeringConnection"
@@ -39,10 +42,6 @@ spec:
           - "ec2:DescribeVpcs"
           - "ec2:DescribeVpnConnections"
           - "ec2:DescribeVpnGateways"
-          - "ec2:CreateVpnConnection"
-          - "ec2:CreateTags"
-          - "ec2:CreateRoute"
-          - "ec2:DescribeRouteTables"
           - "ec2:DetachVpnGateway"
           - "ec2:ModifyVpcPeeringConnectionOptions"
           - "ec2:RejectVpcPeeringConnection"
