update outdated awsfederatedaccountaccess example
Signed-off-by: yeya24 <yb532204897@gmail.com>

--- a/deploy/crds/aws_v1alpha1_awsfederatedaccountaccess_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_awsfederatedaccountaccess_cr.yaml
@@ -8,4 +8,6 @@ spec:
     name: secret-name
     namespace: example-namespace
   externalCustomerAWSIAMARN: arn:aws:iam::${AWS_ACCOUNT_ID}:user/${AWS_IAM_USER}
-  awsFederatedRoleName: read-only 
+  awsFederatedRole:
+    name: read-only
+    namespace: aws-account-operator
