--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -16,6 +16,10 @@ parameters:
   required: true
 - name: BASE_OU_ID
   required: true
+- name: ACCOUNT_POOL_NAME
+  required: true
+- name: ACCOUNT_POOL_NAMESPACE
+  required: true
 
 objects:
 - apiVersion: operators.coreos.com/v1alpha1
@@ -55,3 +59,11 @@ objects:
     account-limit: "${ACCOUNT_LIMIT}"
     root: ${ROOT_OU_ID}
     base: ${BASE_OU_ID}
+
+- apiVersion: v1
+  kind: AccountPool
+  metadata:
+    name: ${ACCOUNT_POOL_NAME}
+    namespace: ${ACCOUNT_POOL_NAMESPACE}
+  spec:
+    poolSize: 0
