Fix CRD generation

--- a/deploy/crds/aws_v1alpha1_accountclaim_crd.yaml
+++ b/deploy/crds/aws_v1alpha1_accountclaim_crd.yaml
@@ -44,6 +44,8 @@ spec:
           properties:
             accountLink:
               type: string
+            accountOU:
+              type: string
             aws:
               properties:
                 regions:
