--- a/deploy/crds/aws.managed.openshift.io_awsfederatedroles_crd.yaml
+++ b/deploy/crds/aws.managed.openshift.io_awsfederatedroles_crd.yaml
@@ -4,14 +4,14 @@ metadata:
   name: awsfederatedroles.aws.managed.openshift.io
 spec:
   additionalPrinterColumns:
-  - JSONPath: .status.state
-    description: Status the federated role
-    name: State
-    type: string
-  - JSONPath: .metadata.creationTimestamp
-    description: Age since federated role was created
-    name: Age
-    type: date
+    - JSONPath: .status.state
+      description: Status the federated role
+      name: State
+      type: string
+    - JSONPath: .metadata.creationTimestamp
+      description: Age since federated role was created
+      name: Age
+      type: date
   group: aws.managed.openshift.io
   names:
     kind: AWSFederatedRole
@@ -23,33 +23,32 @@ spec:
     status: {}
   validation:
     openAPIV3Schema:
+      description: AWSFederatedRole is the Schema for the awsfederatedroles API
       properties:
         apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+          description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
           type: string
         kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+          description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
         spec:
+          description: AWSFederatedRoleSpec defines the desired state of AWSFederatedRole
           properties:
             awsCustomPolicy:
-              description: AWSCustomPolicy is the defenition of a custom aws permission
-                policy that will be associated with this role
+              description: AWSCustomPolicy is the defenition of a custom aws permission policy that will be associated with this role
               properties:
                 awsStatements:
                   items:
+                    description: StatementEntry is the smallest gourping of permissions required to create an aws policy
                     properties:
                       action:
                         items:
                           type: string
                         type: array
                       condition:
+                        description: Condition contains the aws Condition map to use for IAM roles
                         properties:
                           StringEquals:
                             additionalProperties:
@@ -60,6 +59,7 @@ spec:
                       effect:
                         type: string
                       principal:
+                        description: Principal  contains the aws account id for the principle entity of a role
                         properties:
                           AWS:
                             description: aws account id
@@ -67,15 +67,15 @@ spec:
                               type: string
                             type: array
                         required:
-                        - AWS
+                          - AWS
                         type: object
                       resource:
                         items:
                           type: string
                         type: array
                     required:
-                    - effect
-                    - action
+                      - action
+                      - effect
                     type: object
                   type: array
                 description:
@@ -83,49 +83,45 @@ spec:
                 name:
                   type: string
               required:
-              - name
-              - description
-              - awsStatements
+                - awsStatements
+                - description
+                - name
               type: object
             awsManagedPolicies:
-              description: AWSManagedPolicies is a list of amazong managed policies
-                that exist in aws
+              description: AWSManagedPolicies is a list of amazong managed policies that exist in aws
               items:
                 type: string
               type: array
             roleDescription:
-              description: RoleDescription is a user friendly description of the role,
-                this discription will be displayed in the OCM user interface
+              description: RoleDescription is a user friendly description of the role, this discription will be displayed in the OCM user interface
               type: string
             roleDisplayName:
-              description: RoleDisplayName is a user friendly display name for the
-                OCM user interface
+              description: RoleDisplayName is a user friendly display name for the OCM user interface
               type: string
           required:
-          - roleDisplayName
-          - roleDescription
+            - roleDescription
+            - roleDisplayName
           type: object
         status:
+          description: AWSFederatedRoleStatus defines the observed state of AWSFederatedRole
           properties:
             conditions:
               items:
+                description: AWSFederatedRoleCondition is a Kubernetes condition type for tracking AWS Federated Role status changes
                 properties:
                   lastProbeTime:
                     description: LastProbeTime is the last time we probed the condition.
                     format: date-time
                     type: string
                   lastTransitionTime:
-                    description: LastTransitionTime is the laste time the condition
-                      transitioned from one status to another.
+                    description: LastTransitionTime is the laste time the condition transitioned from one status to another.
                     format: date-time
                     type: string
                   message:
-                    description: Message is a human-readable message indicating details
-                      about last transition.
+                    description: Message is a human-readable message indicating details about last transition.
                     type: string
                   reason:
-                    description: Reason is a unique, one-word, CamelCase reason for
-                      the condition's last transition.
+                    description: Reason is a unique, one-word, CamelCase reason for the condition's last transition.
                     type: string
                   status:
                     description: Status is the status of the condition
@@ -134,18 +130,19 @@ spec:
                     description: Type is the type of the condition.
                     type: string
                 required:
-                - type
-                - status
+                  - status
+                  - type
                 type: object
               type: array
             state:
+              description: AWSFederatedRoleState defines the various status an AWSFederatedRole CR can have
               type: string
           required:
-          - state
-          - conditions
+            - conditions
+            - state
           type: object
   version: v1alpha1
   versions:
-  - name: v1alpha1
-    served: true
-    storage: true
+    - name: v1alpha1
+      served: true
+      storage: true
