--- a/deploy/crds/aws.managed.openshift.io_awsfederatedaccountaccesses_crd.yaml
+++ b/deploy/crds/aws.managed.openshift.io_awsfederatedaccountaccesses_crd.yaml
@@ -18,11 +18,13 @@ spec:
     listKind: AWSFederatedAccountAccessList
     plural: awsfederatedaccountaccesses
     singular: awsfederatedaccountaccess
-  scope: Namespaced
+  scope: Cluster
   subresources:
     status: {}
   validation:
     openAPIV3Schema:
+      description: AWSFederatedAccountAccess is the Schema for the awsfederatedaccountaccesses
+        API
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -37,6 +39,8 @@ spec:
         metadata:
           type: object
         spec:
+          description: AWSFederatedAccountAccessSpec defines the desired state of
+            AWSFederatedAccountAccess
           properties:
             awsCustomerCredentialSecret:
               description: AWSCustomerCredentialSecret holds the credentials to the
@@ -66,14 +70,18 @@ spec:
               description: ExternalCustomerAWSARN holds the external AWS IAM ARN
               type: string
           required:
-          - externalCustomerAWSIAMARN
           - awsCustomerCredentialSecret
           - awsFederatedRole
+          - externalCustomerAWSIAMARN
           type: object
         status:
+          description: AWSFederatedAccountAccessStatus defines the observed state
+            of AWSFederatedAccountAccess
           properties:
             conditions:
               items:
+                description: AWSFederatedAccountAccessCondition defines a current
+                  condition state of the account
                 properties:
                   lastProbeTime:
                     description: LastProbeTime is the last time we probed the condition.
@@ -99,18 +107,21 @@ spec:
                     description: Type is the type of the condition.
                     type: string
                 required:
-                - type
                 - status
+                - type
                 type: object
               type: array
             consoleURL:
               type: string
             state:
+              description: AWSFederatedAccountAccessState defines the various status
+                an FederatedAccountAccess CR can have
               type: string
           required:
           - conditions
           - state
           type: object
+      type: object
   version: v1alpha1
   versions:
   - name: v1alpha1
