Adds initial openshift/boilerplate onboarding configs
This commit:

* Adds the Boilerplate update mechanism to allow for bootstrapping the rest of the project.
* Initializes the boilerplate setup with `make boilerplate-update` following the quickstart onboarding documentaton.
* Adds codecov.io config and badge

REF:
[https://issues.redhat.com/browse/OSD-5822](https://issues.redhat.com/browse/OSD-5822)

Signed-off-by: Christopher Collins <collins.christopher@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,9 @@ tags
 .idea/*
 .history
 # End of https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
+
+# Operator-SDK/Boilerplate config
+.operator-sdk/*
+
+# Python venv directory in use by Boilerplate golang-osd-operator/ensure.sh
+.venv/*
